objects/webm__Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>webm__Salesforce_Field_Id__c</fullName>
        <label>Salesforce Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Salesforce_Field_Name__c</fullName>
        <label>Salesforce Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Text_Input_Label__c</fullName>
        <label>Text Input Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Text_Input_Options__c</fullName>
        <label>Text Input Options</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>webm__Text_Input_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Input Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Field_Id__c</fullName>
        <label>Webmerge Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Field_Name__c</fullName>
        <label>Webmerge Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Mapping__c</fullName>
        <label>Webmerge Mapping</label>
        <referenceTo>webm__Webmerge_Mapping__c</referenceTo>
        <relationshipLabel>FIeld Mappings</relationshipLabel>
        <relationshipName>FIeld_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>webm__isChildRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isChildRelationship</label>
        <type>Checkbox</type>
    </fields>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>m{00000000}</displayFormat>
        <label>Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FIeld Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>